done modified filter on katalogPage and add some assets or support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  modal_bottom_sheet: ^2.0.0
 
 dev_dependencies:
   flutter_test:
